@@ -1,6 +1,7 @@
 0.06
  - Fix Test::Map::Tube and planning of tests.
  - Rewrite SEE ALSO section to new style.
+ - Update Module::Install to 1.16 version.
 
 0.05 2015-03-06T09:01:05+01:00
  - Fix test dependencies.
